<resources>
    <string name="app_name">Portable Closet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
    <string name="image_of_the_clothing_item">Image of the clothing item</string>
    <string name="item_name">Item\'s Name</string>
    <string name="item_size">Item\'s Size</string>
    <string name="item_style">Item\'s Style</string>
    <string name="item_color">Item\'s Color</string>
    <string name="personal_note">Personal Note</string>
    <string name="any_color">Any Color</string>
    <string name="add">Add</string>
    <string name="edit_styles">Edit Styles</string>
    <string name="please_enter_name">Please enter the style\'s name.</string>
    <string name="style_esists">This style already exists.</string>
    <string name="bought_sth_new_widget">Bought something new? 😀\nDon\'t forget to add it.</string>
    <string name="add_widget">Add widget</string>
    <string name="delete">Delete</string>
    <string name="all_styles">All Styles</string>
    <string name="no_items_found">No Items found.\nTry different selection or add them.</string>
    <string name="confirm_delete">Tap again to confirm.</string>
    <string name="default_notification_channel_id">1</string>
    <string name="color">Color</string>
    <string name="style">Style</string>
    <string name="some_error">There has been some error, please try again.</string>
    <string name="close_dialog">Close dialog</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome to\nPortable Closet</string>
    <string name="filter">Filter</string>
    <string name="name_plaseholder">Name of the Item</string>
    <string name="add_a_new_clothing_item">Add a new clothing item</string>
    <string name="set_filter">Set a filter</string>
</resources>
