<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_detail_main_layout"
    tools:context=".ui.fragments.ClothesDetailInfoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_detail_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_of_the_clothing_item"
        app:layout_constraintEnd_toStartOf="@+id/fragment_detail_layout"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_plus" />

    <LinearLayout
        android:id="@+id/fragment_detail_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_detail_image"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_image"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_detail_name"
            style="@style/FilterInfoDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_detail_size"
            style="@style/FilterInfoDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_detail_style"
            style="@style/FilterInfoDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_side_margin"
            tools:text="@string/style" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_detail_color"
            style="@style/FilterInfoDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_side_margin"
            tools:text="@string/color" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="fragment_detail_layout,fragment_detail_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_detail_note"
        style="@style/PlainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:paddingTop="@dimen/default_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelBarrier"
        tools:text="@string/personal_note" />

    <TextView
        android:id="@+id/fragment_detail_delete"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:drawableStart="@drawable/ic_menu_delete"
        android:drawablePadding="@dimen/dp4"
        android:paddingEnd="@dimen/default_side_margin"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detail_note"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:contentDescription="@string/edit"
        android:gravity="center_vertical"
        android:src="@drawable/ic_edit_query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>