<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_items_main_layout"
    tools:context=".ui.fragments.FilteredItemsFragment">


    <TextView
        android:id="@+id/fragment_items_description_color"
        style="@style/FilterDesctiption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:padding="@dimen/default_side_margin"
        android:text="@string/color"
        app:layout_constraintEnd_toStartOf="@id/fragment_items_description_style"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_items_description_style"
        style="@style/FilterDesctiption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:padding="@dimen/default_side_margin"
        android:text="@string/style"
        app:layout_constraintEnd_toStartOf="@id/fragment_items_description_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/fragment_items_description_color"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_items_description_size"
        style="@style/FilterDesctiption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:padding="@dimen/default_side_margin"
        android:text="@string/size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/fragment_items_description_style"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fragment_items_spinner_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/fragment_items_description_color"
        app:layout_constraintStart_toStartOf="@id/fragment_items_description_color"
        app:layout_constraintTop_toBottomOf="@id/fragment_items_description_color" />

    <Spinner
        android:id="@+id/fragment_items_spinner_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/fragment_items_description_style"
        app:layout_constraintStart_toStartOf="@id/fragment_items_description_style"
        app:layout_constraintTop_toBottomOf="@id/fragment_items_description_style" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragment_items_edittext_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/size"
        app:layout_constraintEnd_toEndOf="@id/fragment_items_description_size"
        app:layout_constraintStart_toStartOf="@id/fragment_items_description_size"
        app:layout_constraintTop_toBottomOf="@id/fragment_items_description_size" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="fragment_items_spinner_style,fragment_items_edittext_size" />

    <TextView
        android:id="@+id/fragment_items_no_items"
        style="@style/TopTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_side_margin"
        android:text="@string/no_items_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelBarrier" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_items_rec_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_side_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelBarrier"
        tools:listitem="@layout/item_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_items_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:background="@null"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>